Resolving conflicts.