@@ -48,7 +48,7 @@ public class Table {
     }
     public void changeCurrentPlayer() {
         Collections.swap(players, 0, 1);
-        currentPlayer = players.getFirst();
+        currentPlayer = players.get(0);
     }
 
     public boolean putCard(Card card, int row) {
@@ -62,7 +62,7 @@ public class Table {
 
     public void changeTurn() {
         Collections.swap(players, 0, 1);
-        currentPlayer = players.getFirst();
+        currentPlayer = players.get(0);
     }
 
     public GameInformation saveGame() {
